syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.server.grpc";

service serverService{
  rpc hello(Empty) returns (ResponseServer){}
  rpc reportFile(FileReport) returns(ResponseServer){}
}

message FileReport{
  string fileName = 1;
}

message ResponseServer{
  string responseMessage = 1;
}

message Empty{
}